# prometheus

./: .clang-format  .gitignore  .gitmodules  BUILD_WINDOWS.md  CMakeLists.txt  LICENSE  README.md  TODO.md  build-all.bat  build-debug.bat  build-modern.bat  build-modern.sh  build-ninja.bat  build-ninja.sh  build.bat  build.sh  build_linux.md  build_ninja.bat  build_windows.bat  build_windows.md  build_windows.ps1  compile-shaders.bat  compile-shaders.sh  imgui.ini
assets/fonts/: roboto_bold.embed  roboto_italic.embed  roboto_regular.embed
assets/icons/: prometheus_icon.embed  voltrum_icon.embed
assets/images/: window_images.embed
assets/shaders/: Builtin.ObjectShader.frag.glsl  Builtin.ObjectShader.vert.glsl
client/: CMakeLists.txt
client/src/: app_viewport_layer.cpp  app_viewport_layer.hpp  entry.cpp
client/src/ui/: client_ui.cpp  client_ui.hpp
core/: CMakeLists.txt
core/src/: client_types.hpp  defines.hpp  entry.hpp
core/src/application/: application.hpp
core/src/assets/: assets.cpp  assets.hpp
core/src/containers/: auto_array.hpp
core/src/core/: absolute_clock.cpp  absolute_clock.hpp  application.cpp  application.hpp  asserts.hpp  logger.cpp  logger.hpp  string.cpp  string.hpp
core/src/events/: events.cpp  events.hpp
core/src/input/: input.cpp  input.hpp  input_codes.cpp  input_codes.hpp
core/src/math/: math.cpp  math.hpp  math_types.hpp
core/src/memory/: memory.cpp  memory.hpp  memory_arena.cpp  memory_arena.hpp
core/src/platform/: filesystem.cpp  filesystem.hpp  platform.cpp  platform.hpp
core/src/renderer/: canvas_renderer.cpp  canvas_renderer.hpp  renderer_backend.cpp  renderer_backend.hpp  renderer_frontend.cpp  renderer_frontend.hpp  renderer_platform.hpp  renderer_types.hpp  vulkan_backend.cpp  vulkan_backend.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_platform.hpp  vulkan_types.hpp
core/src/renderer/vulkan/: vulkan_backend.cpp  vulkan_backend.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_fence.cpp  vulkan_fence.hpp  vulkan_framebuffer.cpp  vulkan_framebuffer.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_platform.hpp  vulkan_render_target.cpp  vulkan_render_target.hpp  vulkan_renderpass.cpp  vulkan_renderpass.hpp  vulkan_sampler.cpp  vulkan_sampler.hpp  vulkan_shader_utils.cpp  vulkan_shader_utils.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_types.hpp  vulkan_ui.hpp  vulkan_ui_image.cpp  vulkan_ui_image.hpp  vulkan_utils.cpp  vulkan_utils.hpp  vulkan_viewport.cpp  vulkan_viewport.hpp
core/src/renderer/vulkan/shaders/: vulkan_object_shader.cpp  vulkan_object_shader.hpp
core/src/resources/: resource_manager.cpp  resource_manager.hpp
core/src/resources/loaders/: binary_loader.cpp  binary_loader.hpp  image_loader.cpp  image_loader.hpp
core/src/ui/: ui.cpp  ui.hpp  ui_components.cpp  ui_components.hpp  ui_config.hpp  ui_dockspace.cpp  ui_dockspace.hpp  ui_fonts.cpp  ui_fonts.hpp  ui_icons.hpp  ui_menu.cpp  ui_menu.hpp  ui_themes.cpp  ui_themes.hpp  ui_titlebar.cpp  ui_titlebar.hpp  ui_types.hpp  ui_viewport.cpp  ui_viewport.hpp  ui_window_resize.cpp  ui_window_resize.hpp
docs/: ARCHITECTURE.md  BUILD_LINUX.md  BUILD_WINDOWS.md  CONTRIBUTING.md
tests/: CMakeLists.txt
tests/src/: expect.hpp  main.cpp  test_manager.cpp  test_manager.hpp
